--- a/login.html
+++ b/login.html
@@ -5,9 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Login</title>
-    <link rel="stylesheet" type="text/css" href="CSS/register.css">
+    <link rel="stylesheet" type="text/css" href="CSS/login.css">
+    <script src="javascript/userFunction.js"></script>
 </head>
 <body>
-
+    <div id="login-screen">
+        <div class="inner-top">
+            <div class="top-box">
+                <div class="box-top">
+                    <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="" />
+                </div>
+                <div class="box-bot">
+                    <div class="form-top">
+                        <h2>Login to your account</h2>
+                        <p>It's quick and easy.</p>
+                    </div>
+                    <div class="form-mid">
+                        <div class="form-container">
+                            <form onsubmit="facebook_login(event)">
+                                <input id="facebook_login_email" class="main-input" type="email" placeholder="Email address" />
+                                <input id="facebook_login_password" class="main-input" type="password" placeholder="Password" />
+                            </form>
+                        </div>
+                        <div class="policy">
+                            <p>People who use our service may have uploaded your contact information to Facebook. <span>Learn more.</span></p>
+                            <p>By Clicking Sign Up, you agree to our <span>Terms, Privacy Policy and Cookies Policy.</span> You may receive SMS notifications from us and can opt out at any time.</p>
+                        </div>
+                    </div>
+                    <div class="form-bot">
+                        <button onclick="facebook_login(event)">Login</button>
+                        <p onclick="redirectToRegister()">Don't have an account?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="inner-bot"></div>
+    </div>
 </body>
 </html>
