--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="form-bot">
                             <button onclick="facebook_register(event)">Sign Up</button>
-                            <p>Already have an account?</p>
+                            <p onclick="redirectToLogin()">Already have an account?</p>
                         </div>
                     </div>
                 </div>
