update JS functionality

--- a/home.html
+++ b/home.html
@@ -59,9 +59,9 @@
             </div>
             <div class="main-home">
                 <div class="main-left">
-                    <div class="left-category">
-                        <img src="https://cdn-icons-png.flaticon.com/512/44/44948.png" alt="" />
-                        <p>Username</p>
+                    <div id="left-category-username" class="left-category">
+                        <!-- <img src="https://cdn-icons-png.flaticon.com/512/44/44948.png" alt="" />
+                        <p>Username</p> -->
                     </div>
                     <div class="left-category">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#1f8be6" viewBox="0 0 256 256"><path d="M125.18,156.94a64,64,0,1,0-82.36,0,100.23,100.23,0,0,0-39.49,32,12,12,0,0,0,19.35,14.2,76,76,0,0,1,122.64,0,12,12,0,0,0,19.36-14.2A100.33,100.33,0,0,0,125.18,156.94ZM44,108a40,40,0,1,1,40,40A40,40,0,0,1,44,108Zm206.1,97.67a12,12,0,0,1-16.78-2.57A76.31,76.31,0,0,0,172,172a12,12,0,0,1,0-24,40,40,0,1,0-14.85-77.16,12,12,0,1,1-8.92-22.28,64,64,0,0,1,65,108.38,100.23,100.23,0,0,1,39.49,32A12,12,0,0,1,250.1,205.67Z"></path></svg>
@@ -113,7 +113,7 @@
                                     <img src="https://cdn-icons-png.flaticon.com/512/44/44948.png" alt="" />
                                 </div>
                             </div>
-                            <div class="nav-search">
+                            <div id="replace-input-username" class="nav-search">
                                 <input type="text" placeholder="What's on your mind?" />
                             </div>
                         </div>
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="right-bot">
+                    <div id="replace-other-users" class="right-bot">
                         <div class="contact-select">
                             <div class="contact-image">
                                 <div class="contact-image-circle">
